fix: contact email on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -286,5 +286,11 @@ section {
         flex-direction: column;
       }
     }
+
+    &#contact {
+      .email {
+        padding: 25px 0;
+      }
+    }
   }
 }
